--- a/src/home/style.css
+++ b/src/home/style.css
@@ -1,3 +1,11 @@
-body{
-    background-color:#e3f6f8fc
-}
+
+  
+  .root {
+    background-color: #e42929;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  .card {
+    flex: 1;
+  }
