--- a/src/home/style.css
+++ b/src/home/style.css
@@ -1,6 +1,6 @@
 
   
-  .root {
+  /* .root {
     background-color: #e42929;
     height: 100%;
     display: flex;
@@ -8,4 +8,11 @@
   }
   .card {
     flex: 1;
+  } */
+
+
+  .root{
+    background-color: brown;
+    height: 800;
+    width: 200;
   }
