modify  Waiting List

--- a/src/authentication/styles.css
+++ b/src/authentication/styles.css
@@ -10,6 +10,8 @@ body {
   text-align: center;
   margin: 15%; 
   position:relative;
+  justify-content: space-around;
+  display: flex;
 }
 
 .button{
